k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rcb-monitor
  namespace: default
spec:
  selector:
    app: rcb-monitor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
